# agent-cowork

./: .gitignore  LICENSE  README.md  docker-compose.yml  mcp.json.example
.github/workflows/: backend-rs.yml
.trae/documents/: add-delete-file-tool-plan.md  add-websearch-toggle-plan.md  agent-action-separate-cards-plan.md  agent-command-tools-plan.md  agent-write-and-document-tools-plan.md  clean-personal-workspace-plan.md  deepseek-official-web-search-compat-plan.md  fix-agent-stop-and-cancel-plan.md  fix-agent-todo-auto-complete-plan.md  fix-agent-write-tool-visibility-plan.md  (+14 more)
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend-rs/: .dockerignore  Cargo.toml  Dockerfile  README.md
backend-rs/bins/agentd/: Cargo.toml
backend-rs/bins/agentd/src/: main.rs  tests.rs
backend-rs/bins/agentd/src/api/: mod.rs  openapi.rs  routes.rs  services.rs  sse.rs
backend-rs/bins/agentd/src/api/handlers/: access.rs  channels.rs  chat.rs  checkpoints.rs  mcp.rs  memories.rs  mod.rs  models.rs  proposals.rs  runs.rs  sessions.rs  snapshot.rs  swarm.rs  system.rs  todos.rs  workspace.rs
backend-rs/crates/agent-config/: Cargo.toml
backend-rs/crates/agent-config/src/: lib.rs
backend-rs/crates/agent-core/: Cargo.toml
backend-rs/crates/agent-core/src/: auth.rs  checkpoint.rs  code_edit.rs  context.rs  hooks.rs  lib.rs  memory.rs  permission.rs  plan.rs  profile.rs  session.rs  subagents.rs  swarm.rs  todo.rs  workspace.rs
backend-rs/crates/agent-core/src/engine/: control.rs  dispatch.rs  edits.rs  memory.rs  mod.rs  plan_exec.rs  react.rs  subagent.rs  todos.rs  turn.rs
backend-rs/crates/agent-core/src/prompts/: coding.rs  document.rs  general.rs  mod.rs  shared.rs
backend-rs/crates/agent-mcp/: Cargo.toml
backend-rs/crates/agent-mcp/src/: lib.rs  manager.rs
backend-rs/crates/agent-protocol/: Cargo.toml
backend-rs/crates/agent-protocol/src/: errors.rs  lib.rs  models.rs  rollout.rs
backend-rs/crates/agent-providers/: Cargo.toml
backend-rs/crates/agent-providers/src/: anthropic.rs  channels.rs  google.rs  lib.rs  mock.rs  openai.rs  service.rs  thinking.rs  tokens.rs  types.rs
backend-rs/crates/agent-store/: Cargo.toml
backend-rs/crates/agent-store/src/: async_store.rs  crypto.rs  event_bus.rs  jsonl.rs  lib.rs  rollout.rs  store.rs
backend-rs/crates/agent-tools/: Cargo.toml
backend-rs/crates/agent-tools/src/: command.rs  document.rs  edit.rs  lib.rs  search_config.rs  shell.rs  skill.rs  web.rs  workspace.rs
backend-rs/scripts/: smoke.ps1
backend-rs/src/: tests.rs
backend-rs/src/api/: gateway.rs  sse.rs
backend-rs/src/contracts/: errors.rs  events.rs  mod.rs
backend-rs/src/domain/: mod.rs  permission.rs  plan.rs  runtime.rs  session.rs  todo.rs
backend-rs/src/infra/: crypto.rs  event_bus.rs  http.rs  mod.rs
backend-rs/src/provider/: channels.rs  google.rs  openai.rs  types.rs
backend-rs/src/tools/: command.rs  mod.rs
backend/src/: __init__.py
backend/src/agent_debug/: dev_llm_defaults.py  server.py  service_registry.py
backend/src/agent_debug/api/: bridge_handlers.py  rest_gateway.py  ws_gateway.py
backend/src/agent_debug/domain/: auth_service.py  checkpoint_service.py  code_edit_engine.py  context_compactor.py  context_manager.py  models.py  permission_service.py  plan_engine.py  replay_service.py  runtime.py  search_config.py  session_service.py  subagent_orchestrator.py  summary_manager.py  swarm_coordinator.py  todo_engine.py  web_search_service.py  workspace_tree.py
backend/src/agent_debug/domain/tools/: __init__.py  base.py  mcp_tools.py  skill_tools.py  subagent_tools.py  todo_tools.py  web_tools.py  workspace_tools.py
backend/src/agent_debug/infra/: circuit_breaker.py  crypto_store.py  event_bus.py  jsonl_store.py  memory_store.py  retry.py  search_config_store.py  tracing.py  user_store.py  utils.py
backend/src/agent_debug/mcp/: demo_service.py
backend/src/agent_debug/prompts/: __init__.py  agent_project_files.py  builtin_subagents.py  composer_mode_prompts.py  skills_discovery.py  skills_reminder.py  system_prompt_assembly.py
backend/src/agent_debug/provider/: anthropic_adapter.py  base.py  channel_store.py  channels.py  cjk_token_estimator.py  fake_provider.py  mock_provider.py  openai_compat_adapter.py  openai_provider.py  package_agent_provider.py  package_model_catalog.py  service.py  thinking_capability.py
backend/tests/: conftest.py
backend/tests/agent_debug/: test_channel_fetch_models.py  test_channel_model_routing.py  test_china_providers.py  test_composer_chat_streaming.py  test_infra_hardening.py  test_model_catalog.py  test_rest_gateway.py  test_skill_tools.py  test_subagent_task_tool.py  test_todo_engine.py  test_workspace_tree.py
backend/tools/: mcp_demo_server.py
docforge/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
gateway-go/: Dockerfile  README.md  auth.go  auth_test.go  config.go  go.mod  main.go  ws.go
rust/: Cargo.toml
rust/apps/agent-ide/: Cargo.toml
rust/apps/agent-ide/src/: app.rs  lib.rs  main.rs
rust/apps/agent-ide/src/ui/: auth.rs  chat.rs  composer.rs  icons.rs  inspector.rs  mod.rs  overlays.rs  settings.rs  sidebar.rs  statusbar.rs  titlebar.rs  workbench.rs
rust/apps/docforge/: Cargo.toml
rust/apps/docforge/src/: app.rs  lib.rs  main.rs
rust/crates/moonlit-api/: Cargo.toml
rust/crates/moonlit-api/src/: lib.rs
rust/crates/moonlit-compile/: Cargo.toml
rust/crates/moonlit-compile/src/: lib.rs
rust/crates/moonlit-core/: Cargo.toml
rust/crates/moonlit-core/src/: hash.rs  ids.rs  lib.rs  models.rs  store.rs
rust/crates/moonlit-doccore/: Cargo.toml
rust/crates/moonlit-doccore/src/: doc_core.rs  layouts.rs  lib.rs  serialize.rs  types.rs
rust/crates/moonlit-preview/: Cargo.toml
rust/crates/moonlit-preview/src/: lib.rs
rust/crates/moonlit-sync/: Cargo.toml
rust/crates/moonlit-sync/src/: client.rs  lib.rs
rust/crates/moonlit-uikit/: Cargo.toml
rust/crates/moonlit-uikit/src/: gpui_ui.rs  lib.rs
rust/packaging/: build-windows.ps1  moonlit.wxs
scripts/: start-stack.ps1
(+7 files in other folders)
