[package]
name = "agentd"
version = "0.1.0"
edition = "2021"
description = "Rust core service for the Agent Debug backend (rewrite of backend/src/agent_debug)"
license = "MIT"

[[bin]]
name = "agentd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls"] }
url = "2"

redb = "2"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

async-trait = "0.1"

# crypto (pure Rust, no C toolchain)
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
base64 = "0.22"
rand = "0.8"

# workspace tools
ignore = "0.4"
regex = "1"
dunce = "1"

dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 2
