[package]
name = "agentd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust core service for the Agent Debug backend (HTTP + SSE server)"

[[bin]]
name = "agentd"
path = "src/main.rs"

[[bin]]
name = "mcp-demo-server"
path = "src/bin/mcp_demo_server.rs"

[dependencies]
agent-config = { workspace = true }
agent-protocol = { workspace = true }
agent-store = { workspace = true }
agent-providers = { workspace = true }
agent-mcp = { workspace = true }
agent-tools = { workspace = true }
agent-core = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
async-trait = { workspace = true }
