[package]
name = "agent-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire contract: DTOs, event schema, error envelope"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
