[package]
name = "agent-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider abstraction: adapters, channel catalog, execution service"

[dependencies]
agent-protocol = { workspace = true }
agent-config = { workspace = true }
agent-store = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
url = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
