[package]
name = "agent-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Durable storage: redb KV, JSONL event log, event bus, crypto, shared HTTP clients"

[dependencies]
agent-protocol = { workspace = true }

redb = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

aes-gcm = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
