[package]
name = "moonlit-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Async client for the agent-debug Python backend: REST + WebSocket + SSE."

[dependencies]
moonlit-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util.workspace = true
reqwest.workspace = true
tracing.workspace = true
