[package]
name = "moonlit-compile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "IR -> OOXML (docx/pptx) compiler with a debounce/cancel/hash-cache job queue."

[dependencies]
moonlit-core.workspace = true
moonlit-doccore.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
quick-xml.workspace = true
zip.workspace = true
