[package]
name = "moonlit-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Embedded y-websocket-compatible sync server (yrs)."

[dependencies]
moonlit-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util.workspace = true
futures-channel.workspace = true
yrs.workspace = true
tracing.workspace = true
