[package]
name = "moonlit-uikit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared native UI model, themes, markdown, code buffers and diff helpers for Moonlit GPUI apps."

[features]
default = []
gpui-backend = ["dep:gpui", "dep:unicode-segmentation"]

[dependencies]
moonlit-core.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
pulldown-cmark.workspace = true
gpui = { workspace = true, optional = true }
unicode-segmentation = { workspace = true, optional = true }
